--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -41,7 +41,7 @@ In plain language: imagine the Architrino dropping tiny “pings” at every mom
 ### **Causal Intersection Times**
 For a receiver $a$ at time $t$ and a source particle $j$, define the causal set of emission times
 $$
-\mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
+\mathcal{C}_j(t) = \big\{\, t_0 < t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
 $$
 When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|> v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
 
@@ -49,7 +49,7 @@ Plain language: you feel a push now from source $j$ only if one of its earlier s
 
 ### **Conventions at Singular Cases**
 - No instantaneous self-force: the $\tau = t - t_0 = 0$ emission does not produce an immediate self-acceleration (we take $H(0)=0$ in the emission formula).
-- Center hits (exactly $r=0$ with $\tau>0$) are symmetric and produce no net directional acceleration; this case has measure zero and can be handled via standard regularization (see Action and Interaction). Intuitively, striking the exact center gives no preferred direction, so any would-be push cancels out.
+- No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
 Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle. In practice, every Architrino is always “riding” the superposed sphere streams of all other Architrinos—and, when kinematics permit (e.g., $|\mathbf{v}|>v$ or sufficiently curved paths), of its own past emissions. The complexity is manageable by treating each causal intersection separately and weighting by distance: each hit contributes a purely radial push scaled by $1/r^2$ (with emitter-side speed modulations), so nearby sources dominate while far ones fade.
 
