--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -22,7 +22,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 
 -   **Causal Interaction Set:** The receiver $o'$ at time $t$ interacts with a source $o$ through the (possibly multi-valued) set of causal emission times
     $$
-    \mathcal{C}_o(t) = \big\{\, t' \le t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
+    \mathcal{C}_o(t) = \big\{\, t' < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
     $$
     For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
 
@@ -42,7 +42,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     Conventions and exclusions:
     - Geometric normalization factors (e.g., $1/(4\pi)$ and any $1/v$ from $\delta$ change-of-variables) are absorbed into $\kappa$; the canonical per-hit law is written with $\kappa\,|q_o q_{o'}|/r^2$.
     - Heaviside convention $H(0)=0$ (no instantaneous self-force).
-    - Exact center hits ($r=0$ with $t>t'$) yield no net directional acceleration (symmetry; measure-zero).
+    - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t')$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
     - Regularization uses the shell $\delta(r-\tau)\to\delta_\eta(r-\tau)$ when continuous-time dynamics are needed.
 
     Two-body checks (stationary sources):
