--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -60,11 +60,11 @@ Plain language: Objects move as dots in 3D through successive instants; speeds a
   $$
 - Causal set:
   $$
-  \mathcal{C}_j(t) = \{\, t_0 \le t \mid \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\}
+  \mathcal{C}_j(t) = \{\, t_0 < t \mid \|\mathbf{s}_{o'}(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\}
   $$
 - Conventions:
   - $H(0)=0$ (no instantaneous self-kick).
-  - Exact center hits $r=0$ with $\tau>0$ yield no directional acceleration (symmetry; measure zero).
+  - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
 Plain language: A push now only happens if a past sphere has had exactly enough time to reach you.
 
