--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -19,7 +19,7 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | $\sigma_{q q'} = \mathrm{sign}(q\,q')$ | Interaction sign: $+1$ like-on-like (repulsion), $-1$ unlike (attraction). | The signum of $q q'$. It selects repulsion vs. attraction by multiplying the radial unit vector in the EOM. |
 | $r,\, \hat{\mathbf{r}}$ | Separation and radial direction from the source’s emission position to the receiver at time $t$ (“now”). | $r$ is the Euclidean distance between receiver-now and source-at-$t_0$; $\hat{\mathbf{r}}$ is the associated unit vector. The $1/r^2$ factor reflects shell surface density. |
 | $t_0,\ \tau = t - t_0$ | Causal emission time and delay to reception. | $t_0$ labels a causally connected emission; $\tau=t-t_0$ is the travel time. Both appear in the root condition and in distributional expressions. |
-| $\mathcal{C}_j(t)$ | Causal set of emission times of source $j$ that reach the receiver at time $t$. | The set of solutions of $F(t_0;t)=\lVert\mathbf{s}_{o'}(t)-\mathbf{s}_j(t_0)\rVert - v(t-t_0)=0$. For $\lVert\mathbf{v}_j\rVert<v$ and transverse crossings, a unique smooth branch follows from the implicit function theorem; multiple roots can occur otherwise. |
+| $\mathcal{C}_j(t)$ | Causal set of emission times of source $j$ that reach the receiver at time $t$. | The set of solutions of $F(t_0;t)=\lVert\mathbf{s}_{o'}(t)-\mathbf{s}_j(t_0)\rVert - v(t-t_0)=0$ with $t_0 < t$. For $\lVert\mathbf{v}_j\rVert<v$ and transverse crossings, a unique smooth branch follows from the implicit function theorem; multiple roots can occur otherwise. |
 | $\delta(r - v\tau),\ \delta_{S_r}$ | Surface delta on expanding shell; surface measure on sphere $S_r$. | $\delta(r-v\tau)$ represents a razor-thin spherical shell in radial coordinates, while $\delta_{S_r}$ is the surface delta on $S_r$. Normalizations ensure total emission integrates to $q$. |
 | $\delta_\eta(\cdot)$ | Mollified (Gaussian) shell with width $\eta > 0$ for smooth dynamics. | A Gaussian mollifier of width $\eta$ that preserves total mass and regularizes forces to be continuous in time; limits are taken in the weak sense as $\eta\to 0$. |
 | $H(\tau)$ | Heaviside step; convention $H(0)=0$ (no instantaneous self-kick). | Enforces causality (no advanced effects). With $H(0)=0$ it removes coincident-time self-kicks; in distributions it gates support to $\tau>0$. |
