--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
@@ -16,7 +16,7 @@ Detailed explanation (dynamical geometry):
   - “Potential field” here is not a static scalar on space; it is the collection of expanding spherical wavefronts from all sources at earlier times, summed at the receiver’s location and now.
 
 - Intersection as the driver of acceleration:
-  - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t' \le t$ satisfies the causal-distance condition
+  - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t' < t$ satisfies the causal-distance condition
     $
     \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = v(t - t')
     $
