--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
@@ -3,8 +3,8 @@
 Event-aware integration (practical algorithm):
 
 1. Root finding:
-   - For each source $o$ (including $o'=o$ for potential self-hits), solve $F(t';t)=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|-(t-t')=0$ for $t'\le t$.
-   - Discard non-physical roots by convention $H(0)=0$; handle $r=0$ cases by symmetry (no directional acceleration).
+   - For each source $o$ (including $o'=o$ for potential self-hits), solve $F(t';t)=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|-(t-t')=0$ for $t'< t$.
+   - Discard non-physical roots by convention $H(0)=0$ (exclude $\tau=0$); note $r=0$ occurs only at $\tau=0$ and is thus excluded.
 
 2. Per-hit accumulation:
    - For each accepted root, compute $r$, $\hat{\mathbf{r}}$, and
