--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
@@ -3,7 +3,7 @@
 Existing text excerpt (from 00.1.4 - Action.md):
 > -   **Causal Interaction Set:** The receiver $o'$ at time $t$ interacts with a source $o$ through the (possibly multi-valued) set of causal emission times
 >     $$
->     \mathcal{C}_o(t) = \big\{\, t' \le t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
+>     \mathcal{C}_o(t) = \big\{\, t' < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
 >     $$
 >     For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$).
 
@@ -12,7 +12,7 @@ Clarification: “Multi-valued” means that, for a fixed observation time $t$, 
 Detailed explanation (geometry of delay and roots):
 
 - Root condition as a light-sphere intersection:
-  - Define $F(t'; t) \equiv \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| - (t - t')$ (with $v=1$ units). Causal roots satisfy $F(t'; t)=0$ with $t' \le t$ and $H(t-t')$.
+  - Define $F(t'; t) \equiv \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| - (t - t')$ (with $v=1$ units). Causal roots satisfy $F(t'; t)=0$ with $t' < t$ and $H(t-t')$.
   - Geometrically: the source point $\mathbf{s}_o(t')$ must lie on the sphere of radius $\tau = t - t'$ centered at the receiver’s current position $\mathbf{s}_{o'}(t)$.
 
 - Local uniqueness (sub-field-speed, transverse crossing):
@@ -24,6 +24,6 @@ Detailed explanation (geometry of delay and roots):
 
 - Conventions at singular cases:
   - We adopt $H(0)=0$ so the instantaneous emission at $t'=t$ does not produce an immediate self-kick.
-  - Exact center hits ($r=0$ with $t>t'$) contribute no directional acceleration (symmetry; measure zero).
+  - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t')$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
 Plain language: You only feel pushes from those earlier moments of a source that lie exactly on the “now-sphere” around you. Usually there’s just one such moment; if the source is very fast or its path loops around, there can be several.
