--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.5 - Numerical Cross-Checks.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.5 - Numerical Cross-Checks.md
@@ -4,7 +4,7 @@ Purpose:
 - Provide a standard recipe for validating analytic baselines and perturbative predictions against simulations of the canonical delayed law.
 
 Recipe:
-- Root finding: solve F(t₀; t)=‖s′(t)−s(t₀)‖−(t−t₀)=0 for all sources (v=1 units), discard by H(0)=0; handle r=0 by symmetry.
+- Root finding: solve F(t₀; t)=‖s′(t)−s(t₀)‖−(t−t₀)=0 for all sources with t₀ < t (v=1 units); discard τ≤0 by H(0)=0. Note r=0 occurs only at τ=0 and is excluded.
 - Per-hit accumulation: a_{o′←o}(t; t₀)=κ σ |q q′|/(r² (1+‖v_o(t₀)‖)) r̂; sum over all roots and sources.
 - Time stepping:
   - Impulsive mode (events): update velocities at hit times (bounded-variation velocities).
