--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -114,8 +114,8 @@ opposite point on the same line.
 
 Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission absorbed into an effective amplitude q_eff and an adjusted emission time. This transformation preserves the receiver’s information content (magnitude and line only) and does not resolve the sign/side ambiguity; it merely trades unknown speed and distance for an equivalent static surrogate on one of the two open rays.
 
-Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto 1/\big(r^2\,(1+|v_{\text{em}}|)\big)$, so $r^2\,(1+|v_{\text{em}}|)$ is fixed; equivalently, $r \propto (1+|v_{\text{em}}|)^{-1/2}$. For a fixed observed magnitude A, the physically consistent (r,|v_em|)
-   pairs satisfy r ∝ (1+|v_em|)^(-1/2), so faster emitters would have been closer along one of the two open rays. A stationary surrogate can either keep r and absorb speed into q_eff, or
-   keep q fixed and move to r_virtual = r√(1+|v_em|).
+Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto 1/\big(r^2\,(1+|v_{\text{em}}|)\big)$, so $r^2\,(1+|v_{\text{em}}|)$ is fixed; equivalently, $r \propto (1+|v_{\text{em}}|)^{-1/2}$. For a fixed observed magnitude A, the physically consistent $(r,|v_{\text{em}}|)$
+   pairs satisfy $r \propto (1+|v_{\text{em}}|)^{-1/2}$, so faster emitters would have been closer along one of the two open rays. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
+   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r\sqrt{\,1+|v_{\text{em}}|\,}$.
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
