Refine mathematical expressions and terminology across multiple documents for clarity and consistency

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -70,9 +70,9 @@ $$
 $$
 Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
 
-Radial motion and the $\large 1/r^2$ factor (local trend):
-- Inward motion ($\large v_r<0$, receiver moving toward the source history point) decreases $r$ between close successive hits, tending to increase subsequent per-hit strengths via $\large 1/r^2$ (all else equal).
-- Outward motion ($\large v_r>0$) increases $r$, tending to decrease subsequent per-hit strengths.
+Radial motion and the $1/r^2$ factor (local trend):
+- Inward motion ($v_r<0$, receiver moving toward the source history point) decreases $r$ between close successive hits, tending to increase subsequent per-hit strengths via $1/r^2$ (all else equal).
+- Outward motion ($v_r>0$) increases $r$, tending to decrease subsequent per-hit strengths.
 
 Path-history delay shifts both the causal root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
@@ -81,7 +81,7 @@ Modeling note: We modulate only the emission amplitude by the source speed via $
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
 ### **Well-posedness and Regularization**
-The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\varepsilon$,
+The surface–delta shells yield impulsive forces at isolated hit times. One may treat the dynamics as a measure-driven ODE in $t$ (with velocity of bounded variation), or regularize by replacing the surface delta with a narrow shell of thickness $\eta$,
 $$
 \delta(r - \tau)\ \longrightarrow\ \frac{1}{\sqrt{2\pi}\,\eta}\,\exp\!\Big(-\frac{(r - \tau)^2}{2\eta^2}\Big),
 $$
