--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.4 - Asymptotic Regimes and Perturbations.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.4 - Asymptotic Regimes and Perturbations.md
@@ -1,7 +1,7 @@
 # 00.2.4 — Asymptotic Regimes and Perturbations
 
 Regimes:
-- Slow motion (β = |v| ≪ 1):
+- Slow motion ($\beta = \|\mathbf{v}\| \ll 1$):
   - Canonical law ≈ central 1/r² + O(β) delay corrections.
   - Emitter-only dimming factor ≈ 1 − β + O(β²).
 - Far field (r ≫ characteristic scale):
