--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -36,10 +36,10 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 3) Self-interaction switch at |v|=v: the engine of stabilization and scales
+## 3) Self-interaction switch at $\lvert \mathbf{v}\rvert = v$: the engine of stabilization and scales
 
 - What we assume:
-  - When a worldline outruns its own recently emitted shells (|v|>1 in our units), the causal roots include self-hits.
+  - When a worldline outruns its own recently emitted shells ($\lvert \mathbf{v}\rvert>1$ in our units), the causal roots include self-hits.
   - Self-hits are always repulsive (like-on-like).
 
 - Why it matters:
@@ -110,7 +110,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Observable: a “quiet line” (near-zero net potential) threading the binary.
 
 2) Scale selection for $d_0$ and $t_0$
-- With $\delta\to\delta_\varepsilon$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines $d_0$ and the maximum orbital frequency $2\pi/t_0$.
+- With $\delta\to\delta_\eta$, compute the mean inward attraction from the partner versus the mean outward self-repulsion across one orbit; the fixed point defines $d_0$ and the maximum orbital frequency $2\pi/t_0$.
 - Prediction: the same d0 appears across binaries with the same ε and v, independent of initial conditions after sufficient relaxation.
 
 3) Energy consistency across the |v|=1 transition
