--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -20,7 +20,7 @@ Purpose: Define a single, canonical mathematical and geometrical dialect for the
   - Unit vectors carry hats: $\hat{\mathbf{r}}$.
   - Norms use double bars: $\|\cdot\|$.
 - Indices:
-  - Components indexed by $\large i, j \in \{1,2,3\}$ with $\large \delta_{ij}$.
+  - Components indexed by $i, j \in \{1,2,3\}$ with $\delta_{ij}$.
 
 Plain language: One global clock t and ordinary 3D space; we write vectors in bold, unit directions with hats, and lengths with double bars.
 
