--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.1 - Walkthrough Step 1 — Background and Simple Action.md
@@ -16,14 +16,14 @@ Detailed explanation (dynamical geometry):
   - “Potential field” here is not a static scalar on space; it is the collection of expanding spherical wavefronts from all sources at earlier times, summed at the receiver’s location and now.
 
 - Intersection as the driver of acceleration:
-  - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t' < t$ satisfies the causal-distance condition
+  - The receiver’s worldline is $\mathbf{s}_{o'}(t)$. An intersection at time $t$ means some earlier emission time $t_0 < t$ satisfies the causal-distance condition
     $
     \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = v(t - t')
     $
     That event is a causal hit from source $o$’s past to the receiver’s present.
   - At a hit, the acceleration impulse is purely radial along
     $
-    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}.
+    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\|}.
     $
     No cross products or right-hand-rule terms appear; the action is collinear with $\hat{\mathbf{r}}$.
 
