--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
@@ -12,7 +12,7 @@ Clarification: “Multi-valued” means that, for a fixed observation time $t$, 
 Detailed explanation (geometry of delay and roots):
 
 - Root condition as a light-sphere intersection:
-  - Define $F(t'; t) \equiv \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| - (t - t')$ (with $v=1$ units). Causal roots satisfy $F(t'; t)=0$ with $t' < t$ and $H(t-t')$.
+  - Define $F(t_0; t) \equiv \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| - (t - t_0)$ (with $v=1$ units). Causal roots satisfy $F(t_0; t)=0$ with $t_0 < t$ and $H(t-t_0)$.
   - Geometrically: the source point $\mathbf{s}_o(t')$ must lie on the sphere of radius $\tau = t - t'$ centered at the receiver’s current position $\mathbf{s}_{o'}(t)$.
 
 - Local uniqueness (sub-field-speed, transverse crossing):
@@ -23,17 +23,17 @@ Detailed explanation (geometry of delay and roots):
   - When $\|\mathbf{v}_o\|> 1$ at some emission times, the source can outpace recent shells, allowing several distinct historical points to satisfy the same distance–time constraint (multi-hit regime). If $\|\mathbf{v}_o\|<1$ everywhere, $F(t';t)$ is strictly increasing in $t'$, so at most one causal root exists.
 
 - Conventions at singular cases:
-  - We adopt $H(0)=0$ so the instantaneous emission at $t'=t$ does not produce an immediate self-kick.
-  - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t')$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
+  - We adopt $H(0)=0$ so the instantaneous emission at $t_0=t$ does not produce an immediate self-kick.
+  - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
 Plain language: You only feel pushes from those earlier moments of a source that lie exactly on the “now-sphere” around you. Usually there’s just one such moment; if the source is very fast or its path loops around, there can be several.
 
 Non-technical visualization — outrunning your own wake (speedboat analogy):
-- Picture a speedboat continuously laying down circular wake ridges that spread outward across the water at a fixed wave speed $c_w$. If the boat stays slower than $c_w$, it remains inside its newest ridge and will never meet it again—no self-hits. Once the boat exceeds $c_w$, it moves ahead of its freshest ridge. Later, if it curves or slows, it can run into older ridges it created earlier. Each crossing delivers a brief shove normal to the ridge (straight outward from the ridge’s center), mirroring the model’s purely radial push. The ridge “drop rate” never changes; only each ridge’s strength is dimmed by how fast the boat was moving when it made it. This is an analogy: real Kelvin wakes are dispersive; we idealize to circular ridges expanding at one speed to match the model’s fixed-speed shells.
+- Picture a speedboat continuously laying down circular wake ridges that spread outward across the water at a fixed wave speed $c_w$ (analogy variable: wake ridge expansion speed). If the boat stays slower than $c_w$, it remains inside its newest ridge and will never meet it again—no self-hits. Once the boat exceeds $c_w$, it moves ahead of its freshest ridge. Later, if it curves or slows, it can run into older ridges it created earlier. Each crossing delivers a brief shove normal to the ridge (straight outward from the ridge’s center), mirroring the model’s purely radial push. The ridge “drop rate” never changes; only each ridge’s strength is dimmed by how fast the boat was moving when it made it. This is an analogy: real Kelvin wakes are dispersive; we idealize to circular ridges expanding at one speed to match the model’s fixed-speed shells.
 
 Four self-hits in one maneuver (storyboard):
 1) Sprint phase (exceed the field speed): The boat accelerates to a speed strictly greater than $c_w$ and holds it for several ticks. During this super-speed run it lays down several concentric ridges that it immediately outruns.
 2) Set up spacing: Maintain the super-speed for long enough to create at least four successive ridges with noticeable gaps (their radii grow at $c_w\cdot \Delta t$ while the boat advances faster than $c_w$).
 3) Curving return: Bank into a broad, smooth turn (a teardrop/U-turn or a gentle outward spiral) that arcs back toward the track laid moments earlier.
 4) Crossings: As the boat’s curved path cuts across the expanding circles, it re-enters first the outermost of those recent ridges, then the next three in sequence. With a steady arc and timing, four distinct ridge crossings occur in quick succession—four self-hits. The shove at each crossing points straight away from the center of that ring (the boat’s earlier position).
-5) Tuning intuition: To make four hits likely, think “fast straight run” $(|v|>c_w)$ to lay multiple rings, then a wide-radius turn whose chord length is comparable to the ring spacing. Tighter loops and longer super-speed runs increase the chance of multiple crossings; if you never exceed $c_w$, you cannot produce this multi-hit pattern at all.
+5) Tuning intuition: To make four hits likely, think “fast straight run” $(\lvert v\rvert>c_w)$ to lay multiple rings, then a wide-radius turn whose chord length is comparable to the ring spacing. Tighter loops and longer super-speed runs increase the chance of multiple crossings; if you never exceed $c_w$, you cannot produce this multi-hit pattern at all.
