Clarify the inward exponential spiral dynamics and self-repulsive interactions in the orbiting binary assembly description

--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -22,7 +22,7 @@ A symmetric set of equations governs the Positrino's motion based on the Electri
 
 ### 2. The Inward Exponential Spiral
 
-In this system, a stable, circular orbit is impossible. Because the attractive force on each particle points to the *past* position of its partner, it is not a true central force. This delay results in a trajectory that is an **inward exponential spiral**.
+In the strictly sub-field-speed regime (no self-interaction, $|\mathbf{v}|\le v$), a stable, circular orbit is impossible. Because the attractive force on each particle points to the *past* position of its partner, it is not a true central force. This delay yields an **inward exponential spiral** that shrinks $r$ and increases speed until the self-interaction threshold ($|\mathbf{v}|>v$) is crossed.
 
 -   The tangential component of the delayed force sustains the orbital motion.
 -   The radial component continuously pulls the particles closer together.
@@ -45,7 +45,7 @@ Once the particles' speeds exceed the field speed $v$, they cross the symmetry p
 $$
 \mathbf{a}_{1, \text{total}}(t) = \mathbf{a}_{1,2}(t) + \mathbf{a}_{1,1}(t)
 $$
-The new self-repulsive term, $\mathbf{a}_{1,1}(t)$, acts to increase the particle's velocity, causing the inward spiral to tighten and wind down even faster. This phase is "deflationary" as the self-interaction accelerates the collapse of the binary system.
+The new self-repulsive term, $\mathbf{a}_{1,1}(t)$, grows rapidly as the path curvature increases, causing the inward spiral to tighten while driving the system toward a curvature-limited minimum radius rather than a singular collapse. This phase is "deflationary" in that self-interaction accelerates the approach to the limiting circular state.
 
 ### 4. The Stable State and Emergent Properties
 
@@ -54,7 +54,7 @@ The deflationary spiral does not continue indefinitely. The self-repulsive force
 #### **Curvature Limit and Stability**
 The inward spiral does not lead to a singularity. The limiting factor is the geometry of self-interaction. As the spiral tightens, the path's curvature increases, bringing each Architrino closer to its own recent emission points. This proximity dramatically amplifies the self-repulsive force. The system reaches a critical state where any further decrease in orbital radius would cause an overwhelming increase in this self-repulsion, effectively creating a "pressure" that resists further collapse. The inward spiral is halted not by a simple balance of forces, but by this geometric feedback loop.
 
-At this limit, the trajectory stabilizes, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium where the inward pull from the partner is perfectly channeled into the circular motion, while the self-repulsive force prevents any further tightening of the path's curvature.
+At this limit, the trajectory stabilizes, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium where the inward pull from the partner is perfectly channeled into the circular motion, while the self-repulsive force prevents any further tightening of the path's curvature. Importantly, this minimum-radius circular state only exists once self-interaction is active ($|\mathbf{v}|>v$); in the strictly sub-field-speed regime ($|\mathbf{v}|\le v$) no stable circular orbit exists.
 
 #### **Emergent Properties**
 The stabilization of the orbiting binary gives rise to fundamental, emergent properties for the universe:
