--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -12,9 +12,10 @@ Geodesics and dynamics: The background is fixed (absolute time × Euclidean spac
 
 Symbols:
 -   $v=1$ (field speed by units), $\kappa>0$ (coupling), $\eta>0$ (shell thickness)
+-   $f(\lvert v\rvert)$ (emitter-speed dimming factor; default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; see 00.2.1.11)
 -   $\epsilon>0$ (unit charge magnitude); Electrino $q=-\epsilon$, Positrino $q=+\epsilon$
 -   $\sigma_{q q'}=\mathrm{sign}(q\,q')\in\{+1,-1\}$
--   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t')\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t'))/r$
+-   $r=\|\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0)\|$, $\;\hat{\mathbf{r}}=(\mathbf{s}_{o'}(t)-\mathbf{s}_o(t_0))/r$
 
 ### **Fundamental Interaction**
 
@@ -22,27 +23,27 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 
 -   **Causal Interaction Set:** The receiver $o'$ at time $t$ interacts with a source $o$ through the (possibly multi-valued) set of causal emission times
     $$
-    \mathcal{C}_o(t) = \big\{\, t' < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
+    \mathcal{C}_o(t) = \big\{\, t_0 < t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\| = (t - t_0) \,\big\}.
     $$
-    For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
+    For $|\mathbf{v}_o(t_0)| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
 
--   **Master Equation of Motion (canonical):** For each $t' \in \mathcal{C}_o(t)$, define
+-   **Master Equation of Motion (canonical):** For each $t_0 \in \mathcal{C}_o(t)$, define
     $$
-    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}, \quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|.
+    \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\|}, \quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t_0)\|.
     $$
     The signed, purely radial contribution is
     $$
-    \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{\big(1+|\mathbf{v}_o(t')|\big)}\,\hat{\mathbf{r}}.
+    \mathbf{a}_{o'\leftarrow o}(t; t_0) = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big)\,\hat{\mathbf{r}}.
     $$
     No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$. The total acceleration superposes over all sources and causal times:
     $$
-    \mathbf{a}_{o'}(t) = \sum_{o}\ \sum_{t'\in \mathcal{C}_o(t)} \mathbf{a}_{o'\leftarrow o}(t; t').
+    \mathbf{a}_{o'}(t) = \sum_{o}\ \sum_{t_0\in \mathcal{C}_o(t)} \mathbf{a}_{o'\leftarrow o}(t; t_0).
     $$
 
     Conventions and exclusions:
     - Geometric normalization factors (e.g., $1/(4\pi)$ and any $1/v$ from $\delta$ change-of-variables) are absorbed into $\kappa$; the canonical per-hit law is written with $\kappa\,|q_o q_{o'}|/r^2$.
     - Heaviside convention $H(0)=0$ (no instantaneous self-force).
-    - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t')$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
+    - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
     - Regularization uses the shell $\delta(r-\tau)\to\delta_\eta(r-\tau)$ when continuous-time dynamics are needed.
 
     Two-body checks (stationary sources):
@@ -60,13 +61,13 @@ $$
 \qquad v_r \equiv \mathbf{v}_{o'}(t)\cdot \hat{\mathbf{r}},
 \qquad \mathbf{v}_\perp \equiv \mathbf{v}_{o'}(t) - v_r \hat{\mathbf{r}}.
 $$
-Because $\mathbf{a}_{o'\leftarrow o}(t;t') \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
+Because $\mathbf{a}_{o'\leftarrow o}(t;t_0) \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
 $$
 \frac{d}{dt}\mathbf{v}_\perp \;=\; \mathbf{0}\quad\text{from this hit}, 
 \qquad
-\frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t')\cdot \hat{\mathbf{r}}
+\frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t_0)\cdot \hat{\mathbf{r}}
 \;=\;
-\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2\,\big(1+|\mathbf{v}_o(t')|\big)}.
+\frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big).
 $$
 Thus the per-hit work rate is $\mathbf{a}\cdot\mathbf{v} = (\mathbf{a}\cdot\hat{\mathbf{r}})\,v_r$; there is no instantaneous work on the orthogonal component.
 
@@ -76,7 +77,7 @@ Radial motion and the $1/r^2$ factor (local trend):
 
 Path-history delay shifts both the causal root $t'$ and $\hat{\mathbf{r}}$ over finite intervals, so these are local statements.
 
-Modeling note: We modulate only the emission amplitude by the source speed via $1/\big(1+|\mathbf{v}_o(t')|\big)$. The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
+Modeling note: We modulate only the emission amplitude by the source speed via $f(\lvert \mathbf{v}_o(t_0)\rvert)$ (default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$; see 00.2.1.11). The receiver’s velocity does not further modulate the force magnitude; it influences the instantaneous power through $\mathbf{a}\cdot\mathbf{v} = |\mathbf{a}|\,v_r$ and the subsequent evolution of $r$.
 
 Plain language: split your velocity into along-the-line and sideways. A hit only changes the along-the-line piece right now; sideways motion continues. If you’re moving inward, the next pushes tend to be stronger (1/r²); outward, weaker.
 
@@ -114,8 +115,8 @@ opposite point on the same line.
 
 Rest-frame recast (useful inference device): Any single hit can be equivalently described with a stationary emitter (|v|=0) placed somewhere along the same unoriented line of action, with the emitter’s actual speed at emission absorbed into an effective amplitude q_eff and an adjusted emission time. This transformation preserves the receiver’s information content (magnitude and line only) and does not resolve the sign/side ambiguity; it merely trades unknown speed and distance for an equivalent static surrogate on one of the two open rays.
 
-Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto 1/\big(r^2\,(1+|v_{\text{em}}|)\big)$, so $r^2\,(1+|v_{\text{em}}|)$ is fixed; equivalently, $r \propto (1+|v_{\text{em}}|)^{-1/2}$. For a fixed observed magnitude A, the physically consistent $(r,|v_{\text{em}}|)$
-   pairs satisfy $r \propto (1+|v_{\text{em}}|)^{-1/2}$, so faster emitters would have been closer along one of the two open rays. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
-   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r\sqrt{\,1+|v_{\text{em}}|\,}$.
+Level-set relation (speed–distance tradeoff): For a fixed observed per-hit magnitude, the canonical law implies $a \propto f(|v_{\text{em}}|)/r^2$, hence $r \propto \sqrt{\,f(|v_{\text{em}}|)\,}$. For a fixed observed magnitude A, the physically consistent $(r,|v_{\text{em}}|)$
+   pairs satisfy $r \propto \sqrt{f(|v_{\text{em}}|)}$, so faster emitters would have been closer along one of the two open rays. With the default $f(|v|)=1/(1+|v|)$ this reduces to $r \propto 1/\sqrt{1+|v_{\text{em}}|}$. A stationary surrogate can either keep $r$ and absorb speed into $q_{\mathrm{eff}}$, or
+   keep $q$ fixed and move to $r_{\mathrm{virtual}} = r/\sqrt{\,f(|v_{\text{em}}|)\,}$.
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
