--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.5 - Walkthrough Step 5 — Receiver velocity and work.md
@@ -2,13 +2,13 @@
 
 Existing text excerpt (from 00.1.4 - Action.md):
 > ### Receiver velocity: radial vs orthogonal components (instantaneous effect)
-> Because $\mathbf{a}_{o'\leftarrow o}(t;t') \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
+> Because $\mathbf{a}_{o'\leftarrow o}(t;t_0) \parallel \hat{\mathbf{r}}$, its instantaneous effect satisfies
 > $$
 > \frac{d}{dt}\mathbf{v}_\perp \;=\; \mathbf{0}\quad\text{from this hit}, 
 > \qquad
-> \frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t')\cdot \hat{\mathbf{r}}
+> \frac{d}{dt}v_r \;=\; \mathbf{a}_{o'\leftarrow o}(t;t_0)\cdot \hat{\mathbf{r}}
 > \;=\;
-> \frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2\,\big(1+|\mathbf{v}_o(t')|\big)}.
+> \frac{\kappa\,\sigma_{q_o q_{o'}}\,|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big).
 > $$
 
 Detailed explanation (decomposition and energetics):
