--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -106,7 +106,7 @@ Canonical per-hit acceleration:
 $$
 a_{o′\leftarrow j}(t; t_0)
 = \kappa\,\sigma_{q_j q_{o′}}\,
-\frac{|q_j q_{o′}|}{r^2\,(1 + \|\mathbf{v}_j(t_0)\|)}\,\hat{\mathbf{r}}.
+\frac{|q_j q_{o′}|}{r^2}\,f\!\big(\|\mathbf{v}_j(t_0)\|\big)\,\hat{\mathbf{r}}.
 $$
 
 Total acceleration:
@@ -162,7 +162,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
 - $\kappa>0$ universal coupling.
 - $\eta>0$ mollifier width (regularization parameter).
-- $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude; emission cadence is constant). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
+- $\large q_{\mathrm{eff}}(t_0) = q\,f\!\big(\lvert v_{\text{source}}(t_0)\rvert\big)$ (per-wavefront amplitude; emission cadence is constant; default $f(|v|)=1/(1+|v|)$). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims only the emitter’s per-wavefront amplitude and response, not cadence.
