--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -51,7 +51,7 @@ Plain language: you feel a push now from source $j$ only if one of its earlier s
 - No instantaneous self-force: the $\tau = t - t_0 = 0$ emission does not produce an immediate self-acceleration (we take $H(0)=0$ in the emission formula).
 - No $r=0$ causal roots beyond $\tau=0$: because $r = v(t - t_0)$, $r=0$ implies $\tau=0$; the $\tau=0$ case is excluded by $H(0)=0$. Under mollification, the symmetric limit as $r\to 0$ yields zero net push.
 
-Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle. In practice, every Architrino is always “riding” the superposed sphere streams of all other Architrinos—and, when kinematics permit (e.g., $|\mathbf{v}|>v$ or sufficiently curved paths), of its own past emissions. The complexity is manageable by treating each causal intersection separately and weighting by distance: each hit contributes a purely radial push scaled by $1/r^2$ (with emitter-side speed modulations), so nearby sources dominate while far ones fade.
+Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle. In practice, every Architrino is always “riding” the superposed sphere streams of all other Architrinos—and, when kinematics permit (whenever $|\mathbf{v}|>v$ at some emission times), of its own past emissions. The complexity is manageable by treating each causal intersection separately and weighting by distance: each hit contributes a purely radial push scaled by $1/r^2$ (with emitter-side speed modulations), so nearby sources dominate while far ones fade.
 
 ### **The Stationary Architrino and Absolute Space**
 A special and fundamental case arises when an Architrino is stationary with respect to absolute space, i.e., its velocity $\mathbf{v}_a = 0$.
