--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.10 - Walkthrough Step 10 — Numerical recipe and stability.md
@@ -9,7 +9,7 @@ Event-aware integration (practical algorithm):
 2. Per-hit accumulation:
    - For each accepted root, compute $r$, $\hat{\mathbf{r}}$, and
      $$
-     \mathbf{a}_{o'\leftarrow o}(t;t')=\kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{1+\|\mathbf{v}_o(t')\|}\,\hat{\mathbf{r}}.
+     \mathbf{a}_{o'\leftarrow o}(t;t_0)=\kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,f\!\big(\|\mathbf{v}_o(t_0)\|\big)\,\hat{\mathbf{r}}.
      $$
    - Sum over all sources and all roots (superposition).
 
