--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
@@ -1,18 +1,7 @@
 # Walkthrough Step 4 — Master equation of motion
 
 Existing text excerpt (from 00.1.4 - Action.md):
-> -   **Master Equation of Motion (canonical):** For each $t' \in \mathcal{C}_o(t)$, define
->     $$
->     \hat{\mathbf{r}} = \frac{\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')}{\|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|}, \quad r = \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\|.
->     $$
->     The signed, purely radial contribution is
->     $$
->     \mathbf{a}_{o'\leftarrow o}(t; t') = \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\frac{1}{\big(1+|\mathbf{v}_o(t')|\big)}\,\hat{\mathbf{r}}.
->     $$
->     No magnetic/right-hand-rule terms appear; there are no cross products or velocity-direction couplings—only radial action along $\hat{\mathbf{r}}$.
->     $$
->     \mathbf{a}_{o'}(t) = \sum_{o}\ \sum_{t'\in \mathcal{C}_o(t)} \mathbf{a}_{o'\leftarrow o}(t; t').
->     $$
+> See 00.1.4 — Action.md for the canonical Master Equation of Motion (EOM), stated with emission time $t_0$, delay $\tau=t-t_0$, and the emitter-speed dimming factor $f(\lvert v\rvert)$ (default $f(\lvert v\rvert)=1/(1+\lvert v\rvert)$). This step unpacks the terms and conventions rather than restating the EOM.
 
 Detailed explanation (terms and conventions):
 
@@ -24,7 +13,7 @@ Detailed explanation (terms and conventions):
   - The per-hit magnitude falls as $1/r^2$ (surface density on spheres). All geometric constants (e.g., $1/(4\pi)$ and any Jacobians like $1/v$) are absorbed into $\kappa$ by convention.
 
 - Velocity modulation (emitter-only):
-  - Only the emitter’s speed at emission, $\|\mathbf{v}_o(t')\|$, dims the per-wavefront amplitude via $1/(1+\|\mathbf{v}_o(t')\|)$.
+  - Only the emitter’s speed at emission, $\|\mathbf{v}_o(t_0)\|$, dims the per-wavefront amplitude via $f(\|\mathbf{v}_o(t_0)\|)$ (default $f(|v|)=1/(1+|v|)$).
   - The receiver’s velocity does not change the instantaneous force magnitude; it only affects power through $\mathbf{a}\cdot\mathbf{v}$ (see Step 5).
 
 - Superposition:
